New tree placer

--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -24,17 +24,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 10.379 ms\n",
+      "ptxas info    : Compile time = 20.508 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 445.919 ms\n",
+      "ptxas info    : Compile time = 447.727 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 431.341 ms\n",
+      "ptxas info    : Compile time = 378.514 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -51,17 +51,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.303 ms\n",
+      "ptxas info    : Compile time = 8.481 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 511.013 ms\n",
+      "ptxas info    : Compile time = 456.538 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 150.352 ms\n",
+      "ptxas info    : Compile time = 73.854 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -78,17 +78,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.411 ms\n",
+      "ptxas info    : Compile time = 8.669 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 483.152 ms\n",
+      "ptxas info    : Compile time = 421.316 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 424 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 72.123 ms\n",
+      "ptxas info    : Compile time = 77.061 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -133,7 +133,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 48 registers, used 1 barriers, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 11.082 ms\n",
+      "ptxas info    : Compile time = 11.716 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 48\n",
@@ -165,22 +165,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 17.539 ms\n",
+      "ptxas info    : Compile time = 10.238 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 5.421 ms\n",
+      "ptxas info    : Compile time = 3.281 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.535 ms\n",
+      "ptxas info    : Compile time = 6.866 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 17.080 ms\n",
+      "ptxas info    : Compile time = 15.562 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -420,7 +420,131 @@
       "[0.14144647]\n",
       "[0.14144643480625813]\n",
       "[3.9452562]\n",
-      "[3.945255729561956]\n"
+      "[3.945255729561956]\n",
+      "[2.7107687]\n",
+      "[2.7107683021439404]\n",
+      "[3.1487665]\n",
+      "[3.148766349585172]\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[4.10586846 5.05859175]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostSeparation\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.14144643 3.94525573]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[3.470697]\n",
+      "[3.470696988173085]\n",
+      "[6.9413943]\n",
+      "[6.94139397634617]\n",
+      "[8.393713]\n",
+      "[8.393712961948996]\n",
+      "[0.07739897]\n",
+      "[0.07739900693541185]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[8.39371296 0.07739901]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[17.353481]\n",
+      "[17.353484940865425]\n",
+      "[34.706963]\n",
+      "[34.70696988173085]\n",
+      "[41.96856]\n",
+      "[41.968564809744976]\n",
+      "[0.38699484]\n",
+      "[0.38699503467705926]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[41.96856481  0.38699503]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[0.3531003]\n",
+      "[0.35310069875272765]\n",
+      "[3.789965]\n",
+      "[3.789965582031825]\n",
+      "[2.146739]\n",
+      "[2.1467398140715064]\n",
+      "[2.6367326]\n",
+      "[2.6367332253648272]\n",
+      "[0.039698083]\n",
+      "[0.03969808876667014]\n",
+      "[1.8159051]\n",
+      "[1.815904948030701]\n",
+      "[1.2309796]\n",
+      "[1.2309794244696337]\n",
+      "[1.5046461]\n",
+      "[1.504646080872017]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.14673981 2.63673323]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03969809 1.81590495]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[0.62234104]\n",
+      "[0.6223413133262065]\n",
+      "[2.3894382]\n",
+      "[2.389438186820823]\n",
+      "[1.6067601]\n",
+      "[1.6067605381154593]\n",
+      "[7.5175767]\n",
+      "[7.517577523881461]\n",
+      "[1.3955986]\n",
+      "[1.3955986238550628]\n",
+      "[1.4091043]\n",
+      "[1.4091041677707845]\n",
+      "[1.1257305]\n",
+      "[1.1257304906431822]\n",
+      "[1.2146299]\n",
+      "[1.2146299048755518]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60676054 7.51757752]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39559862 1.40910417]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x794f5c5399c0>\n",
+      "All tests passed.\n"
      ]
     }
    ],
@@ -438,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -458,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
