--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b572b28b",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,18 @@
     "        return f\"N_trees={N_trees}, seed={seed}\"\n",
     "        \n",
     "    def start_process(self, N_trees, seed):\n",
-    "        \"\"\"Start a new worker process.\"\"\"\n",
+    "        \"\"\"Start a new worker process, or mark done if done file exists.\"\"\"\n",
+    "        # Check if done file already exists\n",
+    "        filename = f'ga_N{N_trees}_seed{seed}'\n",
+    "        done_path = kgs.temp_dir + self.checkpoint_dir + f'done/{filename}_done.pickle'\n",
+    "        \n",
+    "        if os.path.isfile(done_path):\n",
+    "            # Done file exists, just mark it as completed without starting process\n",
+    "            self.completed.add((N_trees, seed))\n",
+    "            print(f\"Skipping {self._format_task(N_trees, seed)} - already done (found {done_path})\")\n",
+    "            return\n",
+    "        \n",
+    "        # No done file, start the process normally\n",
     "        p = mp.Process(target=worker_function, \n",
     "                      args=(N_trees, seed, self.base_runner_pickled, self.checkpoint_dir))\n",
     "        p.start()\n",
@@ -596,7 +607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -610,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
