--- a/analysis/check_symmetry.ipynb
+++ b/analysis/check_symmetry.ipynb
@@ -149,7 +149,7 @@
     "            \"Mirror across y-axis\",\n",
     "            \"Mirror across line y=-x\",\n",
     "        ]\n",
-    "        fig, ax = plt.subplots(1,2,figsize=(12,6))\n",
+    "        fig, ax = plt.subplots(1,3,figsize=(18,6))\n",
     "        #im = ax[0].imshow(np.log(matrix.get())/np.log(10))\n",
     "        #fig.colorbar(im, ax=ax[0])\n",
     "        #ax[0].set_yticks(range(len(labels)))\n",
@@ -157,6 +157,7 @@
     "        # Focus the colormap on the \"bad\" band: 0.01 .. 0.1  (log10 -> -2 .. -1)\n",
     "        #im.set_clim(-3.0, 0.)\n",
     "        plt.suptitle(f'{e.N_trees} trees, score={mine[1][i]:.5f}')\n",
+    "        pack_vis_sol.pack_vis_sol(e, ax=ax[2])\n",
     "        pack_vis_sol.pack_vis_sol(e, ax=ax[1], alpha=0.5)\n",
     "        ee = copy.deepcopy(e)\n",
     "        ee.rotate(cp.array([np.pi], dtype=kgs.dtype_cp))\n",
