--- a/analysis/compare_solutions.ipynb
+++ b/analysis/compare_solutions.ipynb
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "5dc3aefc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d50f6a4b754049babe178ff7f3551693",
+       "model_id": "19b492a886074992852756951bf99010",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2abc04e6",
    "metadata": {},
    "outputs": [
@@ -229,17 +229,18 @@
        "(np.float64(70.83695423768984),\n",
        " np.float32(70.28368),\n",
        " np.float64(69.97085147232417),\n",
+       " np.float64(69.04008869122839),\n",
        " np.float64(69.02482526544209))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94331715afaa48179e419f272dfdb96f",
+       "model_id": "d3c548ab33904f1ab2eb11c025a6bb01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +286,7 @@
     "# Add interactive cursor for all lines\n",
     "mplcursors.cursor(lines, hover=True)\n",
     "NN=38\n",
-    "np.sum(theirs[1]), np.sum(mine[1]), np.sum(np.minimum(theirs[1], mine[1])), np.sum(mine[1][:NN]) + np.sum(np.minimum(mine[1][NN:], prognosis[NN:]))"
+    "np.sum(theirs[1]), np.sum(mine[1]), np.sum(np.minimum(theirs[1], mine[1])), np.sum(mine[1][:NN]) + np.sum((prognosis[NN:])), np.sum(mine[1][:NN]) + np.sum(np.minimum(mine[1][NN:], prognosis[NN:]))"
    ]
   },
   {
@@ -297,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d8aa6410016470baa439b856c838496",
+       "model_id": "32c741f4546e4eefae5382fa405a5aa8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,22 +348,22 @@
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 10.063 ms\n",
+      "ptxas info    : Compile time = 9.390 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.056 ms\n",
+      "ptxas info    : Compile time = 3.196 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.767 ms\n",
+      "ptxas info    : Compile time = 6.537 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 15.682 ms\n",
+      "ptxas info    : Compile time = 14.936 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -397,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12353e3375d94d35b2247c3990f72da4",
+       "model_id": "634a3c8d80c14b4cbbd8fd596cd3c88b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a372841c06504400bd08334f0a2ec4b6",
+       "model_id": "fb74016a34df43ef894a92bea0e61354",
        "version_major": 2,
        "version_minor": 0
       },
@@ -447,7 +448,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cfedd8cf54b48ed94a3892097651a56",
+       "model_id": "23ae8b4634e3499bbe36d497ff4d635a",
        "version_major": 2,
        "version_minor": 0
       },
