--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vast\n"
+      "local\n",
+      "WARNING: CUDA MPS not active\n"
      ]
     }
    ],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "37e6e637",
    "metadata": {},
    "outputs": [
@@ -45,9 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(58, 99), (60, 99), (62, 99), (74, 99), (76, 99), (78, 99)]\n",
-      "Using checkpoint directory: controller_runs/\n",
-      "adapt numbers\n"
+      "[(60, 110), (60, 111), (62, 110), (62, 111), (64, 110), (64, 111), (66, 110), (66, 111), (68, 110), (68, 111), (70, 110), (70, 111), (72, 110), (72, 111), (74, 110), (74, 111), (76, 110), (76, 111), (78, 110), (78, 111), (80, 110), (80, 111), (30, 110), (30, 111), (36, 110), (36, 111), (42, 110), (42, 111), (48, 110), (48, 111), (54, 110), (54, 111), (60, 110), (60, 111), (66, 110), (66, 111), (72, 110), (72, 111), (78, 110), (78, 111), (84, 110), (84, 111), (90, 110), (90, 111), (110, 110), (110, 111), (156, 110), (156, 111), (182, 110), (182, 111), (200, 110), (200, 111)]\n",
+      "Using checkpoint directory: controller_runs/\n"
      ]
     }
    ],
@@ -55,10 +55,10 @@
     "DO_CHECK = False\n",
     "\n",
     "# User inputs\n",
-    "N_TREES_LIST = [58,60,62,74,76,78]\n",
+    "N_TREES_LIST = [x.item() for x in np.arange(60,81,2)] + +[110,156,182,200] + [x.item() for x in np.arange(30,91,6)]\n",
     "N_PROCESSES = 2 if kgs.env=='local' else 6  # Maximum concurrent processes\n",
-    "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
-    "SEED_LIST = [99]  # Base seed for reproducibility\n",
+    "DIAGNOSTIC_INTERVAL = 10  # Seconds between diagnostic updates\n",
+    "SEED_LIST = [110,111]  # Base seed for reproducibility\n",
     "\n",
     "# Derived inputs (edit manually to customize seeds per task)\n",
     "N_TREES_SEED_LIST = [(N, SEED) for N in N_TREES_LIST for SEED in SEED_LIST]\n",
@@ -131,23 +131,23 @@
     "        runner.seed = seed\n",
     "        runner.filename = checkpoint_dir + f'ga_N{N_trees}_seed{seed}'\n",
     "\n",
-    "        #if seed%2==0:\n",
-    "        #    runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.\n",
-    "        #else:\n",
-    "        #    runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.5\n",
-    "        if N_trees in [58,60,62,78]:\n",
-    "            runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.\n",
+    "        if seed%2==0:\n",
+    "           runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.\n",
     "        else:\n",
-    "            assert N_trees in [74,76]\n",
-    "            runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.5\n",
+    "           runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.5\n",
+    "        # if N_trees in [58,60,62,78]:\n",
+    "        #     runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.\n",
+    "        # else:\n",
+    "        #     assert N_trees in [74,76]\n",
+    "        #     runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.5\n",
     "\n",
-    "        scores = {58:  (0.34414092),\n",
-    "             60:  (0.34393105),\n",
-    "             62:  (0.34281883),\n",
-    "             74:  (0.34060055),\n",
-    "             76:  (0.34060344),\n",
-    "             78:  (0.34023234)}\n",
-    "        runner.ga.target_score = scores[N_trees]\n",
+    "        # scores = {58:  (0.34414092),\n",
+    "        #      60:  (0.34393105),\n",
+    "        #      62:  (0.34281883),\n",
+    "        #      74:  (0.34060055),\n",
+    "        #      76:  (0.34060344),\n",
+    "        #      78:  (0.34023234)}\n",
+    "        # runner.ga.target_score = scores[N_trees]\n",
     "\n",
     "        # if seed>94:\n",
     "        #     runner.ga.ga_base.initializer.new_tree_placer = True\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "584049d7",
    "metadata": {},
    "outputs": [
@@ -418,17 +418,66 @@
      "output_type": "stream",
      "text": [
       "============================================================\n",
-      "Diagnostics Update - 2026-01-10 14:10:46\n",
+      "Diagnostics Update - 2026-01-10 21:30:41\n",
       "============================================================\n",
       "\n",
-      "N=58, seed=99 [DONE    ]: Gen 529/60000 | Best: [[0.344141, 4.1e-05]]\n",
-      "N=60, seed=99 [DONE    ]: Gen 199/60000 | Best: [[0.343931, 7.2e-05]]\n",
-      "N=62, seed=99 [DONE    ]: Gen 745/60000 | Best: [[0.344302, 1.8e-05]]\n",
-      "N=74, seed=99 [DONE    ]: Gen 1412/60000 | Best: [[0.341339, 4.2e-05]]\n",
-      "N=76, seed=99 [DONE    ]: Gen 1822/60000 | Best: [[0.342451, 2.1e-05]]\n",
-      "N=78, seed=99 [DONE    ]: Gen 1161/60000 | Best: [[0.340601, 2.6e-05]]\n",
+      "N=60, seed=110 [RUNNING ]: No checkpoint found\n",
+      "N=60, seed=111 [RUNNING ]: No checkpoint found\n",
+      "N=62, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=62, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=64, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=64, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=66, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=66, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=68, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=68, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=70, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=70, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=72, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=72, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=74, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=74, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=76, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=76, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=78, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=78, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=80, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=80, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=30, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=30, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=36, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=36, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=42, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=42, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=48, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=48, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=54, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=54, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=60, seed=110 [RUNNING ]: No checkpoint found\n",
+      "N=60, seed=111 [RUNNING ]: No checkpoint found\n",
+      "N=66, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=66, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=72, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=72, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=78, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=78, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=84, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=84, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=90, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=90, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=110, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=110, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=156, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=156, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=182, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=182, seed=111 [PENDING ]: No checkpoint found\n",
+      "N=200, seed=110 [PENDING ]: No checkpoint found\n",
+      "N=200, seed=111 [PENDING ]: No checkpoint found\n",
       "\n",
       "============================================================\n",
+      "\n",
+      "\n",
+      "Status: Running: 2, Pending: 50, Completed: 0, Errored: 0\n",
       "\n"
      ]
     }
@@ -484,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "db4901a3",
    "metadata": {},
    "outputs": [
@@ -524,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b54ce5e4",
    "metadata": {},
    "outputs": [
@@ -691,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -705,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
