--- a/analysis/benchmark_ga.ipynb
+++ b/analysis/benchmark_ga.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d7b03f53",
    "metadata": {},
    "outputs": [
@@ -266,11 +266,11 @@
     "\n",
     "import pack_ga3\n",
     "import time\n",
-    "runner = pack_ga3.baseline_symmetry_180()\n",
+    "runner = pack_ga3.baseline_symmetry_180_tesselated()\n",
     "runner.ga.do_legalize = False\n",
     "runner.ga.ga_base.do_legalize = False\n",
     "runner.ga.ga_base.N_trees_to_do = 156\n",
-    "runner.n_generations = 5\n",
+    "runner.n_generations = 10\n",
     "print(type(runner.rough_relaxers[0].cost.costs[2]))\n",
     "#runner.rough_relaxers[0].cost.costs[2].use_lookup_table = True\n",
     "runner.rough_relaxers[0].cost.costs[2]._ensure_lut_initialized()\n",
