--- a/analysis/benchmark_ga.ipynb
+++ b/analysis/benchmark_ga.ipynb
@@ -266,7 +266,8 @@
     "\n",
     "import pack_ga3\n",
     "import time\n",
-    "runner = pack_ga3.baseline_symmetry_180_tesselated()\n",
+    "runner = pack_ga3.baseline_symmetry_180_tesselated(adapt_moves=True)\n",
+    "runner.ga.ga_base.initializer.ref_sol_axis2_offset = lambda r:0.5\n",
     "runner.ga.do_legalize = False\n",
     "runner.ga.ga_base.do_legalize = False\n",
     "runner.ga.ga_base.N_trees_to_do = 156\n",
