--- a/analysis/test_moves.ipynb
+++ b/analysis/test_moves.ipynb
@@ -66,7 +66,9 @@
    "outputs": [],
    "source": [
     "pop = runner.ga.ga_list[0].champions[0]\n",
-    "pop.merge(runner.ga.ga_list[1].champions[0])"
+    "pop.merge(runner.ga.ga_list[1].champions[0])\n",
+    "for i in range(100):\n",
+    "    pop.merge(copy.deepcopy(runner.ga.ga_list[1].champions[0]))"
    ]
   },
   {
@@ -92,26 +94,26 @@
     "#move.distance_function = 'square90'\n",
     "#move.decouple_mate_location = True\n",
     "#move.distance_function = 'stripe'\n",
-    "move.min_N_trees = 2\n",
+    "#move.min_N_trees = 2\n",
     "generator = cp.random.default_rng(seed=12346)\n",
     "for _ in range(20):\n",
     "    pop_here = copy.deepcopy(pop)\n",
-    "    pop_here.genotype.filter_move_locations_with_edge_spacer = True\n",
-    "    move.do_move_vec(pop_here, cp.array([0]), pop_here.genotype, cp.array([1]), generator)\n",
+    "    #pop_here.genotype.filter_move_locations_with_edge_spacer = True\n",
+    "    move.do_move_vec(pop_here, cp.array([0,2,3,4,5,6,7,8,9,10]), pop_here.genotype, cp.array([1]), generator)\n",
     "    pop_here.genotype.canonicalize()\n",
     "    #print(move_descriptor)\n",
     "    # fig,ax = plt.subplots(1,3,figsize=(18,6))\n",
     "    # plt.sca(ax[0])\n",
     "    # pack_vis_sol.pack_vis_sol(pop.genotype, ax=ax[0], solution_idx=0)\n",
     "    # plt.sca(ax[1])\n",
-    "    # pack_vis_sol.pack_vis_sol(pop_here.genotype, ax=ax[1], solution_idx=0)\n",
+    "    # pack_vis_sol.pack_vis_sol(pop_here.genotype, ax=ax[1], solution_idx=5)\n",
     "    # plt.sca(ax[2])\n",
     "    # pack_vis_sol.pack_vis_sol(pop.genotype, ax=ax[2], solution_idx=1)\n",
     "    fig,ax = plt.subplots(1,3,figsize=(18,6))\n",
     "    plt.sca(ax[0])\n",
     "    pack_vis_sol.pack_vis_sol(pop.genotype.convert_to_phenotype(), ax=ax[0], solution_idx=0)\n",
     "    plt.sca(ax[1])\n",
-    "    pack_vis_sol.pack_vis_sol(pop_here.genotype.convert_to_phenotype(), ax=ax[1], solution_idx=0)\n",
+    "    pack_vis_sol.pack_vis_sol(pop_here.genotype.convert_to_phenotype(), ax=ax[1], solution_idx=5)\n",
     "    plt.sca(ax[2])\n",
     "    pack_vis_sol.pack_vis_sol(pop.genotype.convert_to_phenotype(), ax=ax[2], solution_idx=1)\n",
     "    plt.pause(0.001)\n",
