--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -12,40 +12,7 @@
      "text": [
       "local\n",
       "WARNING: CUDA MPS not active\n",
-      "False\n",
-      "init CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling kernel variant: crystal ===\n",
-      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.656 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 428.934 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 371.748 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 80\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1264\n",
-      "=== Compiling kernel variant: no_sep ===\n",
-      "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n"
+      "False\n"
      ]
     }
    ],
